# Prompting

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: 1. Zero-shot prompting.ipynb  2. Few-shot prompting.ipynb  3. Chain-of-thought prompting.ipynb  4. Evaluating the outcome.ipynb  5. LLM observability.ipynb
