[project]
name = "prompting"
version = "0.1.0"
description = "Simple examples using LangChain to test different prompting techniques"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-google-genai>=2.1.8",
    "langchain>=0.3.26",
    "ipykernel>=6.29.5",
    "python-dotenv>=1.1.1",
    "opik>=1.8.6",
    "deepeval>=3.3.0",
    "ipywidgets>=8.1.7",
]
